--- a/EDI SI5 Promotion Check List/EDI SI5 Promotion Check List.csproj
+++ b/EDI SI5 Promotion Check List/EDI SI5 Promotion Check List.csproj
@@ -123,7 +123,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Text Files\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
